Added: Authorization to my collections
