# routes/orders.js
@@ -11,6 +11,7 @@ const { isAuthenticated } = require("../middleware/authenticate");
 } */
 router.get("/", (request, response) => {
   // #swagger.tags = ['Orders']
+  // #swagger.security = [{ "Authorization": [] }]
   ordersController.getAllOrdersByMyClients(request, response);
 });
 router.post(
@@ -18,6 +19,8 @@ router.post(
   isAuthenticated,
   orderValidationRules(),
   validate,
+  /* #swagger.tags = ['Orders'] 
+  // #swagger.security = [{ "Authorization": [] }] */
   ordersController.createOrderByMyClients,
 );
 router.put(
@@ -25,8 +28,15 @@ router.put(
   isAuthenticated,
   orderValidationRules(),
   validate,
+  /* #swagger.tags = ['Orders'] 
+  // #swagger.security = [{ "Authorization": [] }] */
   ordersController.updateOrderByMyClient,
 );
-router.delete("/:id", isAuthenticated, ordersController.deleteOrderByMyClient);
+router.delete(
+  "/:id",
+  isAuthenticated,
+  /* #swagger.tags = ['Orders'] 
+  // #swagger.security = [{ "Authorization": [] }] */ ordersController.deleteOrderByMyClient,
+);
 
 module.exports = router;
