# routes/supplies.js
@@ -3,18 +3,19 @@ const suppliesController = require("../controllers/supplies");
 const { supplyValidationRules, validate } = require("../middleware/validate");
 const { isAuthenticated } = require("../middleware/authenticate");
 
-//router.get("/", (request, response) => {
-// #swagger.tags = ['Supplies']
-//suppliesController.getAllSuppliesToBreadsAndCakes(request, response);
-//});
+router.get("/", (request, response) => {
+  // #swagger.tags = ['Supplies']
+  // #swagger.security = [{ "openid": [] }]
+  suppliesController.getAllSuppliesToBreadsAndCakes(request, response);
+});
 
-// #swagger.tags = ['Supplies']
-router.get("/", suppliesController.getAllSuppliesToBreadsAndCakes);
 router.post(
   "/",
   isAuthenticated,
   supplyValidationRules(),
   validate,
+  /* #swagger.tags = ['Supplies'] 
+  // #swagger.security = [{ "openid": [] }] */
   suppliesController.createSupplyToBreadsAndCakes,
 );
 router.put(
@@ -22,8 +23,15 @@ router.put(
   isAuthenticated,
   supplyValidationRules(),
   validate,
+  /* #swagger.tags = ['Supplies'] 
+  // #swagger.security = [{ "openid": [] }] */
   suppliesController.updateSupplyToBreadsAndCakes,
 );
-router.delete("/:id", isAuthenticated, suppliesController.deleteSupplyForever);
+router.delete(
+  "/:id",
+  isAuthenticated,
+  /* #swagger.tags = ['Supplies'] 
+  // #swagger.security = [{ "openid": [] }] */ suppliesController.deleteSupplyForever,
+);
 
 module.exports = router;
